package Model;

public enum HintDisplayMode {
    EASY,
    CLASSIC,
    NUMERICAL
}
